finished captcha on navbar

--- a/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using DarfonTemplate_MVC.Areas.HelpPage
-@using DarfonTemplate_MVC.Areas.HelpPage.Models
+@using Template_MVC.Areas.HelpPage
+@using Template_MVC.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
