--- a/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using DarfonTemplate_MVC.Areas.HelpPage.Models
-@using DarfonTemplate_MVC.Areas.HelpPage.ModelDescriptions
+@using Template_MVC.Areas.HelpPage.Models
+@using Template_MVC.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
