--- a/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using DarfonTemplate_MVC.Areas.HelpPage
+@using Template_MVC.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
