--- a/Template_MVC/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/Template_MVC/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using DarfonTemplate_MVC.Areas.HelpPage.Models
+@using Template_MVC.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
