--- a/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using DarfonTemplate_MVC.Areas.HelpPage.ModelDescriptions
+@using Template_MVC.Areas.HelpPage.ModelDescriptions
 @model ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
