--- a/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/Template_MVC/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.ObjectModel
 @using System.Web.Http.Description
 @using System.Threading
-@using DarfonTemplate_MVC.Areas.HelpPage.ModelDescriptions
+@using Template_MVC.Areas.HelpPage.ModelDescriptions
 @model IList<ParameterDescription>
 
 @if (Model.Count > 0)
