--- a/Template_MVC/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Template_MVC/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using DarfonTemplate_MVC.Areas.HelpPage.Models
+@using Template_MVC.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
