--- a/Template_MVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Home", "Index", "Account", new { area = "Admin" }, new { @class = "nav-link text-white" })
+                    @Html.ActionLink("Home", "Index", "Users", new { area = "Admin" }, new { @class = "nav-link text-white" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Users", "Index", "Users", new { area = "Admin" }, new { @class = "nav-link text-white" })
+                    @Html.ActionLink("Users", "Maintain", "Users", new { area = "Admin" }, new { @class = "nav-link text-white" })
                 </li>
                 <li class="nav-item">
                     @Html.ActionLink("Groups", "Index", "Groups", new { area = "Admin" }, new { @class = "nav-link text-white" })
