--- a/Template_MVC/Views/Shared/_Layout.cshtml
+++ b/Template_MVC/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                                 @*<li><a class="dropdown-item" href='/Account/Login'>Login</a></li>*@
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
-                                    @Html.ActionLink("Admin", "Login", "Account", new { area = "Admin" }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Admin", "Index", "Users", new { area = "Admin" }, new { @class = "dropdown-item" })
                                 </li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
