--- a/Template_MVC/Areas/Admin/Views/Groups/Index.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Groups/Index.cshtml
@@ -1,7 +1,19 @@
 ﻿
 @{
-    ViewBag.Title = "Groups";
+    ViewBag.Title = "Group Maintain";
 }
 
-<h2>Groups</h2>
+<script type="text/javascript">
+    export default {
+        data() {
+            return {
+                myname: '請輸入姓名'
+            }
+        }
+    }
+</script>
 
+<div id="app">
+    <input type="text" v-model="myname" value="myname">
+    <p>大家好！我叫 {{ myname }}</p>
+</div>
