--- a/Template_MVC/Areas/Admin/Views/Users/Maintain.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Users/Maintain.cshtml
@@ -3,47 +3,117 @@
     ViewBag.Title = "User Maintain";
 }
 
-<h2>User Maintain</h2>
+<script type="text/javascript">
+    new Vue({
+        el: '#search',
+        data: {
+            users: [],
+            searchText: $("#input_Search").val()
+        },
+        created() {
+            // alert('Hello');
+        },
+        mounted() {
+            this.fetchUsers();
+        },
+        methods: {
+            fetchUsers() {
+                axios.post('/Admin/Users/QueryUser', {
+                    input: this.searchText
+                })
+                .then(response => {
+                    this.users = response.data;
+                    //debugger;
+                })
+                .catch(error => {
+                    console.log(error);
+                });
+            }
+        }
+    });
+</script>
 
-<!-- Nav tabs -->
-<nav>
-    <div class="nav nav-tabs d-flex align-items-center justify-content-center" id="login-register-tabs" role="tablist">
-        <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#search" type="button" role="tab" aria-controls="search" aria-selected="true">Search</button>
-        <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#add" type="button" role="tab" aria-controls="add" aria-selected="false">Add</button>
-    </div>
-</nav>
+<div id="search" class="container tab-pane active">
+    <div class="container mt-3">
+        <h2>User Management</h2>
+        <hr>
+        <div class="row mb-3">
+            <div class="col-4">
+                <input id="input_Search" type="text" class="form-control" placeholder="Search">
+            </div>
+            <div class="col-2">
+                <button class="btn btn-primary" v-on:click="fetchUsers()">Search</button>
+            </div>
+            <div class="col-6 text-end">
+                <button class="btn btn-success">New User</button>
+            </div>
+        </div>
 
-<!-- Tab panes -->
-<div class="tab-content">
-    <!-- Search tab -->
-    <div id="search" class="container tab-pane active">
-        <br>
-        <form>
-            <div class="form-group">
-                <label for="searchInput">Search:</label>
-                <input type="text" class="form-control" id="searchInput" placeholder="Enter keyword">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
 
-    <!-- Add tab -->
-    <div id="add" class="container tab-pane fade">
-        <br>
-        <form>
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" id="username" placeholder="Enter username">
-            </div>
-            <div class="form-group">
-                <label for="userno">Userno:</label>
-                <input type="text" class="form-control" id="userno" placeholder="Enter userno">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+
+        <table class="table">
+                <thead>
+                    <tr>
+                        <th>User ID</th>
+                        <th>Username</th>
+                        <th>User No</th>
+                        <th>Email</th>
+                        <th>Active</th>
+                        <th>Admin</th>
+                        <th>Last Login</th>
+                        <th>Created Date</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="user in users" :key="user.user_id">
+                        <td>{{ user.user_id }}</td>
+                        <td>{{ user.username }}</td>
+                        <td>{{ user.userno }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>{{ user.is_active ? 'Yes' : 'No' }}</td>
+                        <td>{{ user.is_admin ? 'Yes' : 'No' }}</td>
+                        <td>{{ user.lastlogin }}</td>
+                        <td>{{ user.cdt }}</td>
+                        <td>
+                            <button class="btn btn-primary btn-sm">Edit</button>
+                            <button class="btn btn-danger btn-sm">Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
     </div>
 </div>
+
+@*<!-- Nav tabs -->
+    <nav>
+        <div class="nav nav-tabs d-flex align-items-center justify-content-center" id="login-register-tabs" role="tablist">
+            <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#search" type="button" role="tab" aria-controls="search" aria-selected="true">Search</button>
+            <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#add" type="button" role="tab" aria-controls="add" aria-selected="false">Add</button>
+        </div>
+    </nav>
+
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <!-- Search tab -->
+
+        <!-- Add tab -->
+        <div id="add" class="container tab-pane fade">
+            <br>
+            <form>
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control" id="username" placeholder="Enter username">
+                </div>
+                <div class="form-group">
+                    <label for="userno">Userno:</label>
+                    <input type="text" class="form-control" id="userno" placeholder="Enter userno">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" placeholder="Enter password">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>*@
