--- a/Template_MVC/Views/Error/Unauthorized.cshtml
+++ b/Template_MVC/Views/Error/Unauthorized.cshtml
@@ -3,5 +3,26 @@
     ViewBag.Title = "Unauthorized";
 }
 
-<h2>Unauthorized</h2>
+<style>
+    body {
+        background-image: url('../../Images/dfbg.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+    }
 
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.6);
+            z-index: -1;
+        }
+</style>
+<div style="display: flex; justify-content: center; align-items: center; height: 100%;">
+    <h2 style="color:red">@Resources.Resource.Page401</h2>
+</div>
