--- a/Template_MVC/Views/Shared/_Layout.cshtml
+++ b/Template_MVC/Views/Shared/_Layout.cshtml
@@ -66,14 +66,18 @@
                 <a class="nav-link disabled">Disabled</a>
             </li>*@
                     </ul>
-                    @if (HttpContext.Current.Session["userName"] == null)
-                    {
-                        <button id="btn-login" class="btn btn-outline-info me-2" type="button" data-bs-toggle="modal" data-bs-target="#loginModal">@Resources.Resource.LoginTitle</button>
-                    }
-                    else
-                    {
-                        <label class="me-2" style="color:white" >Hello @HttpContext.Current.Session["userName"] !!</label>
-                        <button id="btn-logout" class="btn btn-outline-info me-2" type="button" data-bs-toggle="modal">@Resources.Resource.Logout</button>
+                    @{ 
+                        if (HttpContext.Current.Session["userName"] == null)
+                        {
+                            <button id="btn-login" class="btn btn-outline-info me-2" type="button" data-bs-toggle="modal" data-bs-target="#loginModal">@Resources.Resource.LoginTitle</button>
+                        }
+                        else
+                        {
+                            <label class="me-2" style="color:white">
+                                @Html.ActionLink("Hello "+ @HttpContext.Current.Session["userName"] + " !!", "Maintain", "Account", new { area = "" }, new { style = "color:white;" })                                
+                            </label>
+                            <button id="btn-logout" class="btn btn-outline-info me-2" type="button" data-bs-toggle="modal">@Resources.Resource.Logout</button>
+                        }
                     }
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
