--- a/Template_MVC/Views/Shared/_Layout.cshtml
+++ b/Template_MVC/Views/Shared/_Layout.cshtml
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer" style="justify-content: center; align-items: center;">
                         <label id="lbl_errMsg"></label>
                     </div>
                 </div>
@@ -356,6 +356,4 @@
             //});
         </script>
     </body>
-
-
 </html>
